includedir = $(prefix)/include/libpreludedb

include_HEADERS = 			\
	preludedb-object-selection.h	\
	preludedb-plugin-sql.h		\
	preludedb-plugin-format.h	\
	preludedb-sql-settings.h	\
	preludedb-sql.h			\
	preludedb-error.h		\
	preludedb.h

nodist_include_HEADERS = preludedb-version.h

noinst_HEADERS =
